--- a/06-Patch.Rmd
+++ b/06-Patch.Rmd
@@ -236,6 +236,15 @@ See:
     ◾ [FIXTURE] [#] {CLEAR PATCH} - From the Editor toolbar. 
 
     ◾ [FIXTURE] [#] [DELETE] - Only works in the Patch Workspace.
+    
+    
+    
+    
+    
+### Address Test
+
+
+    
 
 ## Configuring Physical DMX 1/0 {#Configuring-Physical-DMX-1-0-6.5}
 
