--- a/06-Patch.Rmd
+++ b/06-Patch.Rmd
@@ -12,7 +12,9 @@ This chapter deals with creating and patching fixtures.
 -  [6.5.   Configuring Physical DMX 1/0](#Configuring-Physical-DMX-1-0-6.5)
 -  [6.6.   Patching Inputs](#Patching-Inputs-6.6)
 -  [6.7.   Parking Addresses and Fixtures](#Parking-Addresses-and-Fixtures-6.7)
-
+-  [6.8.   Clone Fixtures](#Clone-Fixtures-6.8)
+-  [6.9.   Device Replacement](#Device-Replacement -6.9)
+-  [6.10.  DMX Output & Input Views](#DMX-Output-&-Input-Views-6.10)
 
 ## Fixture Sets {#Fixture-Sets-6.1}
 
@@ -244,6 +246,14 @@ See:
 ### Address Test
 
 
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FAGyTdWpcZi3HPwmU0rnL%2Fimage.png?alt=media&token=ccc28500-51db-468b-b47a-a93e7b304cc7)
+
+Sometimes, especially in theater environments, it is useful to check if a DMX channel is empty or not. This can be done from the console by enabling the Address Test function on the header of the Universe View.
+
+In Address Test mode each selected channel is visualized with a yellow background and it is forced to jump at full intensity.
+
+Once the function is disabled all the channels come back to their normal state.
+
     
 
 ## Configuring Physical DMX 1/0 {#Configuring-Physical-DMX-1-0-6.5}
@@ -408,3 +418,108 @@ See: [18.2. Patch Exam](#PatchExam-18.2.)
 
 ><span style="color:Red">> The Grandmaster does not affect parked addresses and fixtures. The [B.O.] key **will** blackout parked addresses and fixtures.</span>
 
+
+## Clone Fixtures {#Clone-Fixtures-6.8}
+
+
+Implemented smart and advanced fixture clone features.
+
+The Fixture Cloning feature allows to copy all the stored data from a selection of fixtures to another one.
+
+To open the fixture cloning popup, press the dedicated button in Patch page's Editor Toolbar.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fv22YcHyYGopTWuQX2DnN%2Fimage.png?alt=media&token=d71e788a-c5b8-4a4e-8689-2db96cc5b62f)
+
+Choose the order of source fixtures on the left column and the order of destination fixtures on the right column, then press Done.
+
+Vibe will provide a smart fixture cloning keeping the fixtures' data as similar as possible.
+
+Selection Rules:
+
+- All source fixtures must be of the same type.
+
+- All destination fixtures must be of the same type.
+
+- Many fixtures can be cloned to many fixtures, but the amount must be the same.
+
+- It is possible to select 1 source and many destinations.
+
+The fixture cloning operation is not reversible, so there is no undo once hitting the DONE button.
+
+**Exchange Clone**
+
+The Cloning option on the top can be set as a one sided or a two-sided clone.
+
+A one-sided clone copies the stored data from the source to the destination fixtures only.
+
+A two-sided clone, called Exchange Clone, makes a smart replacement of data from the source fixtures to the destination fixtures and vice versa.
+
+**Advanced Clone**
+
+The Advanced fixture cloning option on the top enables access to a pair of Next popup windows where the matching parameters can be filtered, forced, and customized by the user.
+
+The next step shows the Parameter Selection window.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FvvpN8eujaS0Dh0zIjP4b%2Fimage.png?alt=media&token=fee33c32-7594-4dfc-85d1-6955092bba47)
+
+The cloning can be based on raw values, preserving the parameters' levels, or on smart values, preserving the fixture's functions. Raw values means that Vibe will match between parameter types and copy the raw value. Smart means that Vibe will try to find the real data information of the parameter and convert the values to match the destination fixture to look the same. Default is Smart.
+
+On the right side there is a match table between the source and destination fixtures parameters. This table is dynamic and shows the data set from the left side. User can also change matching parameters manually, but this is only to very special cases and anyway it is not recommended. SMART will anyway overrule the table in case there is a parameter that is included in the smart.
+
+The next step shows the Data window.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F1HzpKFZgeKASMmpZs2LG%2Fimage.png?alt=media&token=9ec4c019-b93f-4c0c-b817-8986bf9c060d)
+
+The Data window permits to filter the Groups, Libraries, Qlists, Scenes and Submasters, to apply the cloning only to the selected contents. Default is that all are selected.
+
+NOTE: on the exchange option, these lists will show objects from both source and destination fixtures.
+
+There is an option to clone the calibration data, so the destination fixture will get the same location coordinates as the source fixture. Default is Disabled, because in real world 2 fixtures cannot have the same physical position, but can be enabled, for example in case of fixture switches or if working on a 3D visualizer trying different lighting setups on the same rig.
+
+There is an option to clone the look ahead mask so if the source fixture is in the mask, then the destination fixtures will also be in the mask. Default is Enabled.
+
+There is an option to choose what to do with the parameters of the destination fixtures that are not included in the clone because they were not matched or any other reason. Merge means to keep these values, overwrite will delete the values. Default is Overwrite.
+
+
+## Device Replacement {#Device-Replacement -6.9}
+
+
+
+Implemented smart and advanced device replacement.
+
+The Device replacement feature allows to replace a device with another one, keeping all the matching data stored.
+
+To open the device replacement popup, press the dedicated button in Patch page's Editor Toolbar.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FzPe1UTIUN6xwnSuzr1rK%2Fimage.png?alt=media&token=970e04e6-ca5e-4eb1-878f-c926b0ffd378)
+
+Choose the Source device on the left column and the new device from the Imported Devices on the right column, then press Done.
+
+Vibe will provide a smart device replacement keeping the fixtures' data as similar as possible.
+
+The device replacement operation is not reversible, so there is no undo once hitting the DONE button.
+
+**Advanced Replacement**
+
+The Advanced replacement option on the top enables access to a Next popup window where the matching parameters can be filtered, forced and customized by the user.
+
+The next step shows the Parameter Selection window.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F0XJztm0t2HZbXa4JolJL%2Fimage.png?alt=media&token=6af26fa4-6e1d-4fa4-ae70-f9b479bde6c3)
+
+
+Each bank has its option to enable/disable. Enabled means it will be included in the Device replacement and disabled means it will not be included. Default is enabled.
+
+The replacement can be based on raw values, preserving the parameters' levels, or on smart values, preserving the fixture's functions. Raw values means that Vibe will match between parameter types and copy the raw value. Smart means that Vibe will try to find the real data information of the parameter and convert the values to match the destination fixture to look the same. Default is Smart.
+
+On the right side there is a match table between the source and destination fixtures parameters. This table is dynamic and shows the data set from the left side. User can also change matching parameters manually, but this is only to very special cases and anyway it is not recommended. SMART will anyway overrule the table in case there is a parameter that is included in the smart.
+
+
+## DMX Output & Input Views {#DMX-Output-&-Input-Views-6.10}
+
+
+DMX Output and DMX Input views are meant to show in real time the output and input values of each DMX channel of the selected universe.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FkgRh2KCyKzGA5X2nfmRs%2Fimage.png?alt=media&token=c5e90163-9614-4f6e-bd69-d3dcd638736f)
+
+DMX values can be shown in numeric or in graphic visualization.
